--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/footballer2021/react-test0005-20230923.git",
+  "homepage": "https://footballer2021.github.io/react-test0005-20230923",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
